tests/paczka1/fuzzy1/23693658.err
Error in line 9: O9K S570 61,4
Error in line 1: S570 S541 45,7
Error in line 12: S570 S692 58,1
Error in line 15: EhXVA S854 51,3
Error in line 19: gVizdM S854 64,8
Error in line 34: O0nkVbpW8 S541 99,8
